--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,10 @@
 /* #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.card {
-  padding: 2em;
-  margin: 2em;
-}
-
-
-.read-the-docs {
-  color: #888;
+  position: relative;
 } */
 
-/* .root {
-  width: 100vw;
-  height: 100vh;
-  background-color: aqua;
-} */
-
-.App {
-  width: 100vw;
-  height: 100vh;
+.header {
+  width:100%;
 }
 
 .treeCard {
